[package]
name = "mujo-jojo"
version = "0.1.0"
edition = "2024"

[dependencies]
mujoco-sys = { path = "../../../mujoco-sys" }
glfw-sys = "6.0.0"
glow = "0.16.0"
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
foxglove = { version = "0.16.1", features=["derive", "schemars", "unstable"] }
serde = "1.0.228"
env_logger = "0.11.8"
serde_json = "1.0.145"
